# sillyORM

./: CHANGELOG.md  Makefile  README.md  app.py  docs.sh  format.sh  lint.sh  postgres.sh  psql.sh  pyproject.toml  shell.nix  test.sh  test.xml  xml.py  xmltest.py
.github/workflows/: ghpages.yml  lint.yml  release.yml  test.yml  typecheck.yml
docs/: conf.py  index.rst
docs/source/: API reference.rst  concepts.rst  examples.rst  getting-started.rst  migrations.rst  modules.rst  quickstart.rst  sillyorm.dbms.rst  sillyorm.rst
examples/: app.py  app2.py  benchmark.py
sillyORM/: SQLite.py  __init__.py  environment.py  fields.py  model.py  postgresql.py  sql.py  tests.py
sillyORM/dbms/: SQLite.py  postgresql.py
sillyORM/tests/: internal.py
sillyorm/: __init__.py  environment.py  exceptions.py  fields.py  migration_helpers.py  model.py  registry.py  sql.py
sillyorm/dbms/: SQLite.py  __init__.py  postgresql.py  sqlite.py
tests/: libtest.py  test_add_constraint.py  test_automigrate.py  test_constraints.py  test_environment.py  test_migration_helpers.py  test_model.py  test_model_extend.py  test_model_inheritance.py  test_no_update_tables.py  test_registry.py  test_search.py
tests/fields/: test_boolean.py  test_date.py  test_datetime.py  test_field_base.py  test_float.py  test_id.py  test_integer.py  test_relational.py  test_selection.py  test_string.py  test_test.py  test_text.py
web/: .gitignore  get.sh  staticgen.py
web/app/: root.js  root.xml
web/app/counter/: counter.js  counter.xml
web/app/tools/: errorHandler.js  errorHandler.xml
