[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sillyORM"
version = "0.10.0"
description = "an ORM library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2"]
dev = [
    "pytest", "coverage", "pylint", "mypy", "black", "Sphinx",
    "psycopg2", "types-psycopg2"
]

[tool.setuptools]
packages = ["sillyorm", "sillyorm.dbms"]
