[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sillyORM"
version = "0.11.0"
description = "an ORM library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = ["sqlalchemy"]

[project.optional-dependencies]
dev = [
    "pytest", "coverage", "pylint", "mypy", "black", "Sphinx",
]

[tool.setuptools]
packages = ["sillyorm"]
