[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sillyORM"
version = "0.11.0"
description = "an ORM library"
readme = "README.md"
requires-python = ">=3.11"
# FIXME: switch to the new way to specify licenses sometime (BEFORE FEB. 2026!)
# license = "LGPL-3.0-only"
# license-files = ["LICENSE"]
license = {file = "LICENSE"}
dependencies = [
    "alembic~=1.15.2",
    "sqlalchemy~=2.0.40",
]

[project.optional-dependencies]
dev = [
    "pytest", "coverage", "pylint", "mypy", "black", "Sphinx",
]

[tool.setuptools]
packages = ["sillyorm"]
